--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_pdf">PDFActivity</string>
     <string name="title_activity_splash">SplashActivity</string>
+    <string name="title_activity_github_api">GithubAPIActivity</string>
 </resources>
